--- a/src/presentation/Pagination/Pagination.css
+++ b/src/presentation/Pagination/Pagination.css
@@ -2,8 +2,8 @@
 	font-size: 1.6rem;
 	font-weight: bold;
 	letter-spacing: 0.75px;
-	margin-top: 4rem;
-	margin-bottom: 4rem;
+	margin-top: 3rem;
+	margin-bottom: 3rem;
 }
 
 .pagination-list {
